--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+futures = "0.3.28"
+notify = "6.1.1"
+notify-debouncer-full = "0.3.1"
 home = "0.5.5"
 # clap = "2.33.3"
 tokio = { version = "1.0" }
