--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ home = "0.5.5"
 tokio = { version = "1.0" }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
+markdown = "0.3.0"
