--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,5 @@ tokio = { version = "1.0" }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 markdown = "0.3.0"
+webbrowser = "0.8.12"
+handlebars = "4.5.0"
