--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,10 @@ notify-debouncer-full = "0.3.1"
 home = "0.5.5"
 # clap = "2.33.3"
 tokio = { version = "1.0" }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 serde = { version = "1.0.126", features = ["derive"] }
 serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
 markdown = "0.3.0"
 webbrowser = "0.8.12"
 handlebars = "4.5.0"
+indexmap = "2.1.0"
